nac3parser/src/snapshots/nac3parser__parser__tests__sample_comment.snap
---
source: nac3parser/src/parser.rs
assertion_line: 199
expression: "parse_program(&source, Default::default()).unwrap()"

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
            file: FileName(
                "unknown",
            ),
        },
        custom: (),
        node: While {
            test: Located {
                location: Location {
                    row: 4,
                    column: 7,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Name {
                    id: "test",
                    ctx: Load,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 6,
                        column: 5,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Assign {
                        targets: [
                            Located {
                                location: Location {
                                    row: 6,
                                    column: 5,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                        ],
                        value: Located {
                            location: Location {
                                row: 6,
                                column: 9,
                                file: FileName(
                                    "unknown",
                                ),
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    Some(
                                        3,
                                    ),
                                ),
                                kind: None,
                            },
                        },
                        type_comment: None,
                        config_comment: [
                            "simple assign0",
                            "simple assign1",
                        ],
                    },
                },
            ],
            orelse: [],
            config_comment: [
                "while1",
                "while2",
                "while3",
            ],
        },
    },
]
